--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asgiref>=1.1.2
-channels>=1.1.8
-Django>=1.11.9
+asgiref==1.1.2
+channels==1.1.8
+Django==1.11.9
 docutils
 msgpack-python
 Twisted[tls,http2]
