--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 asgiref==1.1.2
 channels==1.1.8
 Django==1.11.9
-docutils
-msgpack-python
-Twisted[tls,http2]
+docutils==0.14
+msgpack-python==0.5.5
+Twisted[tls,http2]==17.9.0
 django-widget-tweaks
-django-secure
-arrow
-Pillow
-dj_database_url
-websocket-client
-psycopg2
+django-secure==1.0.1
+arrow==0.12.1
+Pillow==5.0.0
+dj_database_url==0.4.2
+websocket-client==0.47.0
+psycopg2==2.7.4
+numpy==1.14
 django-relativedelta==1.0.3
