--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "python.pythonPath": "${workspaceFolder}\\env\\Scripts\\python.exe",
-    "python.formatting.provider": "black"
+    "python.pythonPath": "env\\Scripts\\python.exe"
 }
