--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\vcnet\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
 }
