nginx config change

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -77,5 +77,17 @@ http {
             proxy_set_header Connection "upgrade";
             proxy_pass http://127.0.0.1:8000/chat/;
         }
+        location /account/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_pass http://127.0.0.1:8000/account/;
+        }
+        location /library/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_pass http://127.0.0.1:8000/library/;
+        }
     }
 }
