--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django-widget-tweaks==1.4.1
 Pillow==5.0.0
 dj_database_url==0.4.2
 websocket-client==0.47.0
-django-relativedelta==1.0.3
+django-relativedelta
 psycopg2-binary==2.7.5
 requests==2.20.1
 beautifulsoup4==4.6.3
